# robotics2-proj3

./: .gitignore
forma3_description/: CMakeLists.txt  package.xml
forma3_description/launch/: forma3_ex_cmdvel.launch  forma3_ex_drive.launch  forma3_ex_sensors.launch  forma3_ex_services.launch  forma3_preview.launch  forma3_spawn.launch
forma3_description/msg/: ControlInput.msg  Pose2D.msg  Proximity.msg
forma3_description/rviz/: urdf.rviz
forma3_description/scripts/: drive_twist_middleman.py  move_pos.py  pose_dist_serv.py  proximity_middleman.py
forma3_description/srv/: GetDist.srv  GetPose.srv
forma3_description/urdf/: forma3.urdf
forma3_gazebo/: CMakeLists.txt  package.xml
forma3_gazebo/launch/: empty_headless.launch  room.launch  room_headless.launch
forma3_gazebo/models/cabinet_shelf/: model.config  model.sdf
forma3_gazebo/models/cabinet_shelf_deep/: model.config  model.sdf
forma3_gazebo/models/desk/: model.config  model.sdf
forma3_gazebo/models/room_wall/: model.config  model.sdf
forma3_gazebo/models/seat/: model.config  model.sdf
forma3_gazebo/models/support_column/: model.config  model.sdf
forma3_gazebo/worlds/: room.world
forma3_map/: CMakeLists.txt  clean_map.py  configuration_space.pgm  package.xml
forma3_map/saved_maps/configuration_space/: room.yaml
forma3_map/saved_maps/free_space/: room.pgm
forma3_map/saved_maps/original_map/: room.pgm
forma3_op/: CMakeLists.txt  package.xml
forma3_op/graphs/: closed_triangle_distributed.xml  open_triangle.xml  open_triangle_distributed.xml  open_triangle_leader.xml  platoon5.xml  stupid_shape.xml
forma3_op/launch/: base.launch  control_point.launch  drive.launch  drive_robot.launch  run_planner.launch  spawn_graph.launch  spawn_robot.launch
forma3_op/scripts/: control_point.py  spawn_graph.py
formation_controller/: CMakeLists.txt  package.xml
formation_controller/launch/: extract_control_ss.launch  independent_controller.launch
formation_controller/scripts/: extract_control_ss.py  independent_controller.py
planner/: CMakeLists.txt  package.xml  prm_planner.py  rrt_planner.py
planner/launch/: prm_planner.launch  rrt_planner.launch
